--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
  <html>
  <head>
   <title>90's</title>
+  <link rel="stylesheet" href="styles.css">
  </head>
  <body>
    <h1>Nineties Looking Website!</h1>
-   <h2>Just regular nonsense</h2>>
+   <h2>Just regular nonsense</h2>
    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit vel facere atque iusto sapiente provident nulla eligendi itaque pariatur mollitia laboriosam nisi dignissimos amet animi veniam veritatis, harum delectus labore!</p>
+   <iframe src="https://giphy.com/embed/gnEv46nJFDxJu" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/internet-geocities-archaeology-gnEv46nJFDxJu">via GIPHY</a></p>
+   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut illum vel ducimus animi? Assumenda quia nulla itaque ipsa ad expedita totam odit id soluta, animi, impedit ducimus optio est similique.
+     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore, cupiditate sunt qui, ratione cum error nobis, nam similique animi quis soluta odio pariatur omnis obcaecati dolores reprehenderit non dignissimos commodi?
+   </p>
+   <iframe src="https://giphy.com/embed/EIiJp9cQ3GeEU" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/please-construction-patient-EIiJp9cQ3GeEU">via GIPHY</a></p>
+   <script src="scripts.js"></script>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eligendi expedita pariatur, amet nihil perspiciatis necessitatibus consequuntur qui magni cumque reprehenderit iste quasi natus facilis, recusandae ipsam voluptatibus ipsum. Nemo.
+     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi laudantium quod reprehenderit, inventore praesentium iure voluptatibus voluptas cumque doloribus omnis similique provident hic esse! Tenetur quod nam amet debitis a!
+   </p>
+   <iframe src="https://giphy.com/embed/tQ4IKlHmWzLtS" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/1990s-welcome-tQ4IKlHmWzLtS">via GIPHY</a></p>
  </body>
  </html>
