added wololo message

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
  </head>
  <body>
    <h1>Nineties Looking Website!</h1>
+   <h2>Wololo</h2>
    <h3>In new Branch I added a subtitle, a mighty subtitle</h3>
    <h2>Just regular nonsense</h2>
    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit vel facere atque iusto sapiente provident nulla eligendi itaque pariatur mollitia laboriosam nisi dignissimos amet animi veniam veritatis, harum delectus labore!</p>
